  try to infer the source path from the bytecode path as
  PyImport_ExecCodeModuleWithPathnames() does.

Extension Modules
-----------------

- Issue #6493: An issue in ctypes on Windows that caused structure bitfields
  of type ctypes.c_uint32 and width 32 to incorrectly be set has been fixed.

- Issue #15194: Update libffi to the 3.0.11 release.

Tools/Demos
-----------

- Move importlib.test.benchmark to Tools/importbench.

- Issue #12605: The gdb hooks for debugging CPython (within Tools/gdb) have
  been enhanced to show information on more C frames relevant to CPython within
  the "py-bt" and "py-bt-full" commands:
    * C frames that are waiting on the GIL
    * C frames that are garbage-collecting
    * C frames that are due to the invocation of a PyCFunction

Documentation
-------------

- Issue #15230: Clearly document some of the limitations of the runpy
  module and nudge readers towards importlib when appropriate.

- Issue #15053: Copy Python 3.3 import lock change notice to all relevant
  functions in imp instead of just at the top of the relevant section.

- Issue #15288: Link to the term "loader" in notes in pkgutil about how things
  won't work as expected in Python 3.3 and mark the requisite functions as
  "changed" since they will no longer work with modules directly imported by
  import itself.

- Issue #13557: Clarify effect of giving two different namespaces to exec or
  execfile().

- Issue #15250: Document that filecmp.dircmp compares files shallowly. Patch
  contributed by Chris Jerdonek.

Tests
-----

- Issue #15320: Make iterating the list of tests thread-safe when running
  tests in multiprocess mode. Patch by Chris Jerdonek.

- Issue #15168: Move importlib.test to test.test_importlib.

- Issue #15091: Reactivate a test on UNIX which was failing thanks to a
  forgotten importlib.invalidate_caches() call.

- Issue #15230: Adopted a more systematic approach in the runpy tests.
